Fixed bug #30287. The server created temporary tables for filesort in the working directory instead of the specified tmpdir directory.